--- a/src/vars.scss
+++ b/src/vars.scss
@@ -1,3 +1,13 @@
+@import url(
+    'https://fonts.googleapis.com/css?family=BioRhyme|Cairo|Montserrat&display=swap'
+    );
+/*
+    font-family: 'Montserrat', sans-serif;
+
+    font-family: 'BioRhyme', serif;
+
+    font-family: 'Cairo', sans-serif;
+*/
 $pink: #E53167;
 $blue: #3480E3;
 $darklight: #223242;
@@ -6,3 +16,21 @@ $white: #FFFFFF;
 $grey: #D8DFE8;
 $dgrey: #AFBED3;
 $bodytxt: #657783;
+$newblue: #96c3ce;
+$green: #539987;
+$html: #F7652D;
+$jquery: #E7A328;
+$wp: #21759b;
+$react: #60DCFA;
+$darkblue: rgba(9,23,68, 1);
+$grad1: #0f2027;
+$grad2: #203a43;
+$grad3: #2c5364;
+$grad4: darken(rgba(80,210,220, 1), 20);
+
+/* MOTHERSHIP */
+$ms-river: rgba(9,23,68, 1);
+$ms-viking: rgba(80,210,220, 1);
+$ms-pers: rgba(255,90,95, 1)
+
+// $grad: linear-gradient(135deg, $grad1, $grad2, $grad3, $grad4);
