--- a/src/App.scss
+++ b/src/App.scss
@@ -31,8 +31,7 @@ border-bottom: 1px solid $newblue !important;
   background-position: center;
   text-align: center;
   width: 100%;
-  height: 100vh;
-
+  min-height: 100vh;
 }
 .grid-display{
   display: flex;
@@ -171,10 +170,85 @@ border-bottom: 1px solid $newblue !important;
 .projects-grid{
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+  min-height: 80vh;
+  background: $grad1;
+  border-radius: 4rem 8rem;
+  border: 1px solid black;
+  box-shadow: 0 0 15px black inset;
+  .mdl-card{
+    margin: 1rem 0 !important;
+  }
+}
+.card_style{
+  margin: auto;
+  min-width: 450px;
+}
+@media only screen and (max-width: 450px) {
+  .card_style{
+    margin: auto;
+    min-width: 320px;
+  }
+  .mdl-tabs__tab{
+  color: $newblue;
+  font-size: 12px !important;
+  padding: 0 12px 0 12px !important;
+  font-weight: bold !important;
+  width: 25% !important;
+  }
+  .projects-grid{
+    background: transparent;
+    border: none;
+    box-shadow: none;
+  }
+  .application-bar{
+    min-width: 340px !important;
+    h1{
+      font-size: 1.5rem !important;
+    }
+  }
+  .form-container{
+    display: grid;
+    grid-template-rows: 1fr !important;
+    grid-template-columns: 1fr !important;
+  }
+  .contact-grid{
+    box-shadow: 0 0 6px black inset;
+    border: 1px solid black;
+  }
+  .mdl-mini-footer{
+  .footer-logo{}
+  .footer-section{
+    font-size: 13.5px;
+  }
+}
+.hero img{
+  width: 300px;
+  height: 100%;
+}
+}
+
+.projects-display{
+  min-height: 90vh;
+  padding: 2rem !important;
+}
+.category-tabs{
+  background: $grad2;
+}
+.mdl-tabs{
+  background: $darklight;
+}
+.mdl-tabs__tab{
+  color: $newblue !important;
+  font-weight: 400 !important;
 }
 .projects-grid-2{
   display: flex;
-  justify-content: left;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+  min-height: 80vh;
 }
 .contact-body{
   margin: auto;
@@ -188,11 +262,6 @@ border-bottom: 1px solid $newblue !important;
     text-align: center;
     justify-content: center;
     width: 80%;
-    min-height: 550px;
-    height: 700px;
-    background: white;
-    color: black;
-    border: 2px solid red;
     margin-bottom: 20px;
     h2{
       font-family: 'Nunito', sans-serif;
@@ -218,10 +287,59 @@ border-bottom: 1px solid $newblue !important;
     margin-right: 2rem;
   }
 }
+.resume-grid{
+padding: 1rem 0;
+}
 .resume-right-col{
-  background: #27221F;
+  background: darken($grad3, 15);
   color: white;
   padding: 2em;
+  box-shadow: 0 0 15px black inset;
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  position: relative;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  &::before{
+    content:'This component is scrollable!';
+    position: sticky;
+    top: 0;
+    left: 100%;
+    background: rgba($grad2, .6);
+    padding: .75rem;
+    color: $newblue;
+    border-radius: 15px;
+    font-weight: 400; 
+    font-family: 'Cairo', sans-serif;
+    box-shadow: 0 0 10px rgba($newblue, .5);
+    opacity: .6;
+  }
+  .h-ruler{
+    border-top: 3px solid $green;
+  }
+}
+.resume-left-col{
+  padding: 0 1.5rem;
+  hr{
+    border-top: 3px solid darken($grad3, 22);
+    width: 50%;
+  }
+  h2{
+    padding-top: 2rem;
+    color: $grey;
+  }
+  h4{
+    color: $newblue;
+  }
+  h5{
+    color: $green;
+  }
+  p{
+    color: $dgrey;
+  }
 }
 .optimize-position{
   display: flex;
@@ -279,7 +397,8 @@ border-bottom: 1px solid $newblue !important;
   position: relative;
 }
 .overlap-content{
-  width: 40%;
+  width: 700px;
+  min-height: 400px;
   background: $newblue; /* fallback for old browsers */
   background: -webkit-linear-gradient(135deg, #0f2027, #203a43, #2c5364, darken($ms-viking, 20)) !important; /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(135deg, #0f2027, #203a43, #2c5364, darken($ms-viking, 20)) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -297,7 +416,6 @@ border-bottom: 1px solid $newblue !important;
           box-shadow: 0 8px 6px -6px $dgrey;
   color: white;
   overflow: hidden;
-  padding: 1rem;
   h1{
     font-family: 'Cairo', sans-serif;
   }
@@ -314,9 +432,26 @@ border-bottom: 1px solid $newblue !important;
 }
 
 
+/*PROJECTS GRID*/
 
 
 
+
+/* FOOTER */
+
+.mdl-mini-footer{
+  background: linear-gradient(45deg, rgba($grad3, 1), rgba($grad1, 1)) !important;
+  font-family: 'Montserrat', sans-serif;
+  .footer-logo{
+    text-decoration: none;
+    color: $grey;
+    font-size: 1.35rem;
+  }
+  .footer-section{
+    font-weight: bold;
+    color: $dgrey;
+  }
+}
 
 
 
@@ -337,7 +472,7 @@ background: linear-gradient(75deg, lighten(#2c5364, 10) 0 30%, #2c5364 30% 60%, 
   background-position: center;
   text-align: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .application-bar{
@@ -361,25 +496,143 @@ background: linear-gradient(75deg, lighten(#2c5364, 10) 0 30%, #2c5364 30% 60%, 
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1.5rem;
-  grid-row-gap: 1rem;
-  align-items: center;
+    grid-row-gap: 1rem;
+    align-items: stretch;
   // display: flex;
     > div{
       margin-top: 1rem;
     }
-
   }
+    > .form-container-confirm{
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 1rem;
+    align-items: center;
+    .custom-list-item{
+      max-width: 280px;
+      margin: auto !important;
+    }
+  }
+    > .form-container-success{
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 1rem;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    grid-row-gap: 0;
+    button{
+      min-width: 300px;
+      margin: 0 auto;
+    }
+    > h1{
+
+      font-size: 2rem;
+      color: $grad1;
+    }
+    > h3{
+      font-size: 1rem;
+      color: $grad1;
+      
+    }
+    > .mailsuccess{
+      height: 200px;
+
+      .checkmark{
+        animation: checkmark 4750ms ease-in-out infinite alternate;
+        transform-origin: center;
+        transform-box: fill-box;
+        box-shadow: 0 0 15px $green;
+      }
+      .plane{
+        animation: plane 4s ease-in-out alternate infinite;
+      }
+      .plane-2{
+        animation: plane2 3s ease-in-out alternate infinite;
+        transform-origin: center;
+      }
+    }
+}
+@keyframes checkmark{
+  from{
+    transform: scale(1) rotateX(0deg) rotateY(0deg);
+    fill: $newblue;
+  }
+  to{
+    transform: scale(1.3) rotateX(360deg) rotateY(-360deg);
+    fill: $blue;
+  }
+}
+@keyframes plane{
+  0% {
+    -webkit-transform: translateY(0px) translateX(0px) scale(1);
+    -moz-transform: translateY(0px) translateX(0px) scale(1);
+    transform: translateY(0px) translateX(0px) scale(1);
+    fill: rgba($grad1, 1);
+  }
+  100% {
+    -webkit-transform: translateY(-100px) translateX(100px) scale(1.5);
+    -moz-transform: translateY(-100px) translateX(100px) scale(1.5);
+    transform: translateY(-100px) translateX(100px) scale(1.5);
+    fill: rgba($green, 1);
+  }
+}
+@keyframes plane2{
+  0% {
+    -webkit-transform: translateY(0px) translateX(0px) scale(1);
+    -moz-transform: translateY(0px) translateX(0px) scale(1);
+    transform: translateY(0px) translateX(0px) scale(1);
+    fill: $grad3;
+  }
+  100% {
+    -webkit-transform: translateY(250px) translateX(-150px) scale(1.6);
+    -moz-transform: translateY(250px) translateX(-150px) scale(1.6);
+    transform: translateY(250px) translateX(-150px) scale(1.6);
+    fill: $green;
+  }
+}
+
   button{
     background: $grad1 !important;
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: bold !important;
-    color: pink !important;
+    font-weight: bolder !important;
+    font-size: 1.15rem;
+    color: lighten($newblue, 15) !important;
+    height: 50px;
+    transition: all .3s ease;
+    &:hover{
+      background: rgba($grad2, 0.9) !important;
+      color: $grey !important;
+      border: 1px solid $grey !important;
+      box-shadow: 15px 7.5px $newblue;
+    }
   }
   input{
     color: $grad2 !important;
   }
-  ::placeholder{
-      color: red !important;
+    .MuiButtonBase-root{
+      margin-top: 1rem;
+    }
+    .MuiFormLabel-root.Mui-focused{
+      color: $grad3;
+    }
+    .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline{
+      border-color: $grad3;
+    }
+    .MuiButton-outlinedSecondary{
+      background: rgba($grad2, .8) !important;
+      border-color: $grad1;
+      color: $grey !important;
+      &:hover{
+        background: rgba($dgrey, .9) !important;
+        color: $ms-pers !important;
+        box-shadow: -15px -7.5px $pink;
+      }
     }
 }
 
